--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,7 @@
   flex-direction: column;
 }
 
-.card {
-  padding: 2em;
-  border: 2px solid #646cff;
-}
-
+/* Header start */
 .logo {
   height: 15vw;
   padding: 0;
@@ -22,6 +18,7 @@
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 
+/* Header end */
 
 /* .scoreContainer {
   position: relative;
@@ -39,6 +36,7 @@
 
 } */
 
+/* scoreboard start */
 .scoreContainer {
   background-color: rgba(255, 255, 255, 0.8); 
   border: 2px solid #f0f0f0;
@@ -78,7 +76,9 @@
   transition: width 0.5s ease-in-out; 
 }
 
+/* scoreboard end */
 
+/* cardcontainer start */
 
 /* .cardContainer {
   display: flex;
@@ -154,6 +154,9 @@
 }
 
 
+/* cardContainer end */
+
+/* mediaQueries */
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
@@ -199,9 +202,6 @@
     align-items: center; 
   }
 }
-
-
-
 
 .background {
   width: 100vw; 
