--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 /* Header start */
 .logo {
-  height: 15vw;
+  height: 10vw;
   padding: 0;
   filter: drop-shadow(1em 0 1em #8f8ff3aa);
 }
@@ -36,12 +36,18 @@
 
 /* scoreboard start */
 .scoreContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 1.2em;
   background-color: rgba(255, 255, 255, 0.8);
   border: 2px solid #f0f0f0;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin: 20px;
+  padding: 1em;
+  margin: 1em;
   text-align: center;
   backdrop-filter: blur(10px);
 }
@@ -97,12 +103,12 @@
   justify-content: center;
   gap: 50px;
   margin: 3em;
-  width: 100%;
+  width: 80%;
 
 }
 
 .pokemonCard {
-  width: 130px;
+  width: 100px;
   height: auto;
   border: 1px solid #9e9e9e;
   box-shadow: rgb(86, 87, 87) 0px 0px 10px 0px;
@@ -112,7 +118,10 @@
   text-align: center;
   transition: transform 0.3s ease-in-out;
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
 }
 
@@ -132,7 +141,7 @@
 
 .pokemonCard h3 {
   margin: 0;
-  padding: 0;
+  padding: 0.1em 0.5em;
   background-color: #333;
   border: #4caf50 1px solid;
   border-radius: 5px;
@@ -147,14 +156,39 @@
 
 
 .pokemonCard img {
-  display: block;
-  width: 100%;
+  display:block;
+  width: 80%;
   height: auto;
   filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.5));
 }
 
 
 /* cardContainer end */
+
+/*Toaster start */
+.toast {
+  visibility: hidden; /* Versteckt den Toast standardmäßig */
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 50%;
+  font-size: 17px;
+  transition: visibility 0.5s, bottom 0.5s ease;
+}
+
+.toast.show {
+  visibility: visible;
+  bottom: 50px; /* Bewegt den Toast ein Stück nach oben, wenn er angezeigt wird */
+}
+
+/*Toaster end */
 
 /* mediaQueries */
 
@@ -167,7 +201,27 @@
     width: auto;
     max-height: 100vh;
   }
+  
 }
+
+@media (max-width: 1063px){
+  
+  .scoreContainer {
+    width: 280px;
+    height: 100px;
+  }
+  .dataContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 3em;
+    width: 100%;
+    height: auto;
+  }
+
+}
+
 
 @media (max-width: 768px) {
 
@@ -177,7 +231,7 @@
   }
 
   .scoreContainer {
-    width: 180px;
+    width: 200px;
     height: 60px;
   }
 
@@ -213,13 +267,18 @@
     width: 80px;
     font-size: 13px;
     margin: 0;
-    padding: 0;
+    padding: 0.1em 0.3em;
     background-color: #333;
     border: #4caf50 1px solid;
     border-radius: 5px;
     color: #646cff;
 
 
+  }
+
+  .scoreContainer {
+    width: 200px;
+    height: 90px;
   }
 
   .scoreContainer,
@@ -233,9 +292,7 @@
     font-size: 14px;
   }
 
-  .progressBarContainer {
-    height: 15px;
-  }
+  
 }
 
 @media (max-width: 768px) {
